# EUROSTAT

./: .gitignore  Makefile  README.md  README.zh-CN.md  pyproject.toml  数据清洗-Merge.ipynb
.github/workflows/: monthly-latest-periods.yml
Tire/: 数据清洗-Value.ipynb  数据清洗-Weight.ipynb
Tire/raw_data/Raw_data_value/: data_2000.xlsx  data_2001.xlsx  data_2002.xlsx  data_2003.xlsx  data_2004.xlsx  data_2005.xlsx  data_2006.xlsx  data_2007.xlsx  data_2008.xlsx  data_2009.xlsx  data_2010.xlsx  data_2011.xlsx  data_2012.xlsx  data_2013.xlsx  data_2014.xlsx  data_2015.xlsx  data_2016.xlsx  data_2017.xlsx  data_2018.xlsx  data_2019.xlsx  data_2020.xlsx  data_2021.xlsx  data_2022.xlsx  data_2023.xlsx  data_2024.xlsx  data_2025_01_06.xlsx  data_2025_07_10.xlsx  data_2025_11.xlsx  data_2025_12.xlsx
Tire/raw_data/Raw_data_weight/: data_2000.xlsx  data_2001.xlsx  data_2002.xlsx  data_2003.xlsx  data_2004.xlsx  data_2005.xlsx  data_2006.xlsx  data_2007.xlsx  data_2008.xlsx  data_2009.xlsx  data_2010.xlsx  data_2011.xlsx  data_2012.xlsx  data_2013.xlsx  data_2014.xlsx  data_2015.xlsx  data_2016.xlsx  data_2017.xlsx  data_2018.xlsx  data_2019.xlsx  data_2020.xlsx  data_2021.xlsx  data_2022.xlsx  (+6 more)
Transport/Data/: eurostat_vio_new.csv
Vehicle/: Vehicle_Cleaning_Value.ipynb  Vehicle_Cleaning_Weight.ipynb
config/: comext_request_config.json
data/: README.md
data/metadata/: latest_periods.csv
src/eurostat_pipeline/: __init__.py  cli.py  comext.py  excel_exports.py  latest_periods.py  mappings.py  pipeline.py  state.py
tests/: test_comext.py  test_domain.py  test_latest_periods.py
(+60 files in other folders)
