[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eurostat-pipeline"
version = "0.1.0"
description = "Reproducible Eurostat tyre and vehicle trade pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1",
  "pandas>=2.2",
]

[project.scripts]
eurostat-pipeline = "eurostat_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
